fix immutable list returned by aggregator